# tank_dynamics

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DOCUMENTATION_UPDATE_SUMMARY.txt  Dockerfile.backend  Dockerfile.frontend  MERGE_READY.md  PLAYWRIGHT_GUIDE.md  README.md  build.sh  docker-compose.vps.yml  pyproject.toml  test_bindings.py
.github/workflows/: deploy.yml
.zed/: settings.json
api/: main.py  models.py  simulation.py  test_ring_buffer.py  test_runtime.py
api/tests/: conftest.py  test_brownian.py  test_concurrent.py  test_endpoints.py  test_websocket.py
bindings/: CMakeLists.txt  bindings.cpp  simulator_verify.cpp  stepper_verify.cpp
docs/: API_REFERENCE.md  CONSTANTS_REFACTORING_SUMMARY.md  CTEST_FIX.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  FRONTEND_GUIDE.md  LESSONS_LEARNED.md  Model Class.md  OPERATOR_QUICKSTART.md  PHASE2_SUMMARY.md  PHASE6_COMPLETION.md  PID Controller Class.md  PRE_MERGE_REVIEW_PHASE5.md  README.md  REFACTORING_COMPLETE.md  RELEASE_CHECKLIST.md  REMAINING_IMPROVEMENTS.md  STATUS.md  Simulator Class.md  Stepper Class.md  TankDynamics.md  Tennessee_Eastman_Process_Equations.md  architect-questions.md  fastapi-pydantic.md  fastapi.md  feedback.md  git-workflow.md  hybrid-ai-workflow-reference.md  next.md  plan.md  pydantic.md  python-packaging.md  react-fundamentals.md  specs-template.md  specs.md  uv-guide.md  workflow.md
docs/project_docs/: STATUS.md  next.md  plan.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: ChartErrorBoundary.tsx  ChartTooltip.tsx  ErrorBoundary.tsx  FlowsChart.tsx  InletFlowControl.tsx  LevelChart.tsx  PIDTuningControl.tsx  PIDTuningPopover.tsx  ProcessView.tsx  SetpointControl.tsx  TabNavigation.tsx  TankGraphic.tsx  TrendsView.tsx  UpsetsView.tsx  ValveChart.tsx
frontend/hooks/: useHistory.ts  useWebSocket.ts
frontend/lib/: types.ts  utils.ts  websocket.ts
frontend/tests/e2e/: connection.spec.ts  controls.spec.ts  setup.ts
prompts/: architect.md  code-reviewer.md  docstring-writer.md  documentation-writer.md  engineer.md  senior-engineer.md
scripts/: dev.sh  new-project.sh
src/: CMakeLists.txt  simulator.cpp  simulator.h  stepper.cpp  stepper.h  tank_model.cpp  tank_model.h
tank_sim/: __init__.py
tests/: CMakeLists.txt  test_placeholder.cpp  test_simulator.cpp  test_stepper.cpp  test_tank_model.cpp
